--- a/about.html
+++ b/about.html
@@ -76,7 +76,9 @@
               </h2>
               <div class="fadeup w-1/3 h-0.5 ml-1 bg-[#135981] xl:w-1/12"></div>
               <p class="fadeup py-4 text-gray-600 text-base lg:text-lg 2xl:text-xl">
-                SimonSites was born out of a passion for web development and a desire to help businesses succeed online. Since our inception, we have been dedicated to creating websites that are not only visually stunning but also highly functional and optimized for performance. Our journey began with a simple goal: to transform ideas into reality by crafting websites that truly reflect the unique identity of each client. <br><br>Over the years, we’ve grown into a full-service web development agency, working with a diverse range of clients across various industries. Our commitment to quality and innovation has driven us to continually refine our processes, adopt the latest technologies, and push the boundaries of what’s possible in web development.
+                SimonSites is a one-person operation that started from a passion for web development. It all began when I realized how much I enjoyed building websites that help small businesses stand out online. What started as a hobby quickly grew into a business where I could help others by creating affordable, custom websites that truly reflect their brand.
+                <br><br>
+                As a solo web developer, I’m able to offer a personalized experience for every client. I take the time to understand your vision and bring it to life with a website that fits your needs perfectly. Being a small operation allows me to focus on each project with care and attention to detail, ensuring that the final product is something we’re both proud of.
               </p>
             </div>
             <div class="md:flex md:justify-end">
@@ -97,7 +99,11 @@
               </h2>
               <div class="w-1/3 h-0.5 ml-1 bg-[#135981] xl:w-1/12"></div>
               <p class="fadeup py-4 text-gray-600 text-base lg:text-lg 2xl:text-xl">
-                At SimonSites, our mission is to empower businesses by providing them with the digital tools they need to thrive in an increasingly competitive landscape. We believe that a well-crafted website is more than just an online presence—it’s a powerful tool for growth, engagement, and success. Our goal is to deliver websites that are not only beautiful but also user-friendly, responsive, and optimized to drive results. We take pride in building long-lasting relationships with our clients, ensuring that their websites evolve alongside their business needs.
+                At SimonSites, my mission is simple: to make professional, custom-built websites accessible to small businesses and individuals who need them most. I believe that a great website doesn’t have to come with a huge price tag, and I’m dedicated to providing affordable solutions without sacrificing quality.
+                <br><br>
+                I take pride in working closely with each client, ensuring that every site I build is not only visually appealing but also functional, responsive, and secure. My goal is to create websites that help you grow, reach your audience, and reflect the heart of your business.
+
+                Every project is an opportunity to bring your vision to life, and I’m here to make that process smooth, personal, and enjoyable.
               </p>
               
             </div>
@@ -211,7 +217,7 @@
         <div class="px-6 pt-12 2xl:px-24">
             <div>
                 <h2 class="fadeup text-2xl font-bold py-4 lg:text-3xl 2xl:text-4xl">
-                    Why Choose Us?
+                    Why Choose Simon Sites?
                 </h2>
                 <div class="fadeup w-1/3 h-0.5 ml-1 mb-4  bg-[#135981] md:w-1/6 2xl:w-1/12"></div>
                 <p class="fadeup text-base lg:text-lg 2xl:text-xl">Choosing the right web development partner is crucial for your business’s success. Here’s why SimonSites is the right choice for you:</p>
@@ -219,8 +225,8 @@
             <div class="grid grid-cols-1 gap-5 mt-4 md:grid-cols-2 2xl:grid-cols-4">
                 <!--SECT 1-->
                 <div class="fadeup w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
-                    <h3 class="text-xl font-semibold mb-2 lg:text-2xl">Proven Expertise</h3>
-                    <p class=" text-gray-600 lg:text-lg">Years of experience in web development, with a portfolio that showcases our ability to deliver exceptional results.</p>
+                    <h3 class="text-xl font-semibold mb-2 lg:text-2xl">Full Commitment</h3>
+                    <p class=" text-gray-600 lg:text-lg">Since we're a small business, we dedicate our full time and effort into every site. We listen and discuss every decision to buld your digital dream.</p>
                 </div>
                 <!--SECT 2-->
                 <div class="fadeup delay1 w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
