--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
               <div class="mx-auto max-w-2xl py-24 sm:py-32 lg:py-48 2xl:py-56">
                 <div class="text-center">
                   <h1 class="text-4xl  mt-12 md:mt-0 font-bold tracking-tight text-gray-900 sm:text-6xl fadeup">Contact Us</h1>
-                  <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">We’d love to hear from you! Whether you have questions about our services, want to discuss a project, or need support, the team at SimonSites is here to help. Reach out to us through any of the methods below, and we'll get back to you as soon as possible.</p>
+                  <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">We’d love to hear from you! Whether you have questions about our services, want to discuss a project, <b>or want to discuss a free demo</b>, the team at SimonSites is here to help. Reach out to us through any of the methods below, and we'll get back to you as soon as possible.</p>
                   
                 </div>
               </div>
