--- a/fr/about.html
+++ b/fr/about.html
@@ -76,7 +76,7 @@
               </h2>
               <div class="fadeup w-1/3 h-0.5 ml-1 bg-[#135981] xl:w-1/12"></div>
               <p class="fadeup py-4 text-gray-600 text-base lg:text-lg 2xl:text-xl">
-                SimonSites was born out of a passion for web development and a desire to help businesses succeed online. Since our inception, we have been dedicated to creating websites that are not only visually stunning but also highly functional and optimized for performance. Our journey began with a simple goal: to transform ideas into reality by crafting websites that truly reflect the unique identity of each client. <br><br>Over the years, we’ve grown into a full-service web development agency, working with a diverse range of clients across various industries. Our commitment to quality and innovation has driven us to continually refine our processes, adopt the latest technologies, and push the boundaries of what’s possible in web development.
+                SimonSites est une entreprise unipersonnelle née d'une passion pour le développement web. Tout a commencé lorsque j'ai réalisé à quel point j'aimais créer des sites web qui aident les petites entreprises à se démarquer en ligne. Ce qui a commencé comme un hobby s'est rapidement transformé en une entreprise où je pouvais aider les autres en créant des sites web abordables et personnalisés qui reflètent vraiment leur marque.  <br><br>En tant que développeur web indépendant, je suis en mesure d'offrir une expérience personnalisée à chaque client. Je prends le temps de comprendre votre vision et de lui donner vie avec un site web qui répond parfaitement à vos besoins. Le fait d'être une petite entreprise me permet de me concentrer sur chaque projet avec soin et attention aux détails, en veillant à ce que le produit final soit quelque chose dont nous sommes tous les deux fiers.
               </p>
             </div>
             <div class="md:flex md:justify-end">
@@ -97,7 +97,7 @@
               </h2>
               <div class="w-1/3 h-0.5 ml-1 bg-[#135981] xl:w-1/12"></div>
               <p class="fadeup py-4 text-gray-600 text-base lg:text-lg 2xl:text-xl">
-                Chez SimonSites, notre mission est d'aider les entreprises en leur fournissant les outils numériques dont elles ont besoin pour prospérer dans un environnement de plus en plus concurrentiel. Nous pensons qu'un site web bien conçu est plus qu'une simple présence en ligne - c'est un outil puissant pour la croissance, l'engagement et le succès. Notre objectif est de fournir des sites web qui ne sont pas seulement beaux, mais aussi conviviaux, réactifs et optimisés pour générer des résultats. Nous sommes fiers d'établir des relations durables avec nos clients, en veillant à ce que leurs sites Web évoluent en même temps que leurs besoins commerciaux.
+                Chez SimonSites, ma mission est simple : rendre accessibles des sites web professionnels et personnalisés aux petites entreprises et aux particuliers qui en ont le plus besoin. Je suis convaincu qu'un site web de qualité ne doit pas nécessairement avoir un prix élevé, et je m'engage à fournir des solutions abordables sans sacrifier la qualité. <br><br> Je suis fière de travailler en étroite collaboration avec chaque client, en m'assurant que chaque site que je construis est non seulement visuellement attrayant, mais aussi fonctionnel, réactif et sécurisé. Mon objectif est de créer des sites web qui vous aident à vous développer, à atteindre votre public et à refléter le cœur de votre entreprise. Chaque projet est l'occasion de donner vie à votre vision, et je suis là pour rendre ce processus fluide, personnel et agréable.
               </p>
               
             </div>
@@ -213,15 +213,15 @@
         <div class="px-6 pt-12 2xl:px-24">
             <div>
                 <h2 class="fadeup text-2xl font-bold py-4 lg:text-3xl 2xl:text-4xl">
-                  Pourquoi nous choisir ?                </h2>
+                  Pourquoi choisir Simon Sites?                </h2>
                 <div class="fadeup w-1/3 h-0.5 ml-1 mb-4  bg-[#135981] md:w-1/6 2xl:w-1/12"></div>
                 <p class="fadeup text-base lg:text-lg 2xl:text-xl">Choisir le bon partenaire de développement web est crucial pour le succès de votre entreprise. Voici pourquoi SimonSites est le bon choix pour vous :</p>
             </div>
             <div class="grid grid-cols-1 gap-5 mt-4 md:grid-cols-2 2xl:grid-cols-4">
                 <!--SECT 1-->
                 <div class="fadeup w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
-                    <h3 class="text-xl font-semibold mb-2 lg:text-2xl">Une expertise éprouvée</h3>
-                    <p class=" text-gray-600 lg:text-lg">Des années d'expérience dans le développement de sites web, avec un portefeuille qui démontre notre capacité à fournir des résultats exceptionnels.</p>
+                    <h3 class="text-xl font-semibold mb-2 lg:text-2xl">Un engagement total</h3>
+                    <p class=" text-gray-600 lg:text-lg">Comme nous sommes une petite entreprise, nous consacrons tout notre temps et nos efforts à chaque site. Nous écoutons et discutons chaque décision pour construire votre rêve numérique.</p>
                 </div>
                 <!--SECT 2-->
                 <div class="fadeup delay1 w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
