--- a/fr/contact.html
+++ b/fr/contact.html
@@ -67,7 +67,7 @@
               <div class="mx-auto max-w-2xl py-24 sm:py-32 lg:py-48 2xl:py-56">
                 <div class="text-center">
                   <h1 class="text-4xl mt-12 md:mt-0 font-bold tracking-tight text-gray-900 sm:text-6xl fadeup">Nous contacter</h1>
-                  <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">Nous aimerions avoir de vos nouvelles ! Que vous ayez des questions sur nos services, que vous souhaitiez discuter d'un projet ou que vous ayez besoin d'aide, l'équipe de SimonSites est là pour vous aider. N'hésitez pas à nous contacter par l'un des moyens ci-dessous, et nous vous répondrons dans les plus brefs délais.</p>
+                  <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">Nous aimerions avoir de vos nouvelles! Que vous ayez des questions sur nos services, que vous souhaitiez discuter d'un projet <b>ou souhaitez discuter d'une démonstration gratuite</b>, l'équipe de SimonSites est là pour vous aider. N'hésitez pas à nous contacter par l'un des moyens ci-dessous, et nous vous répondrons dans les plus brefs délais.</p>
                   
                 </div>
               </div>
