--- a/fr/services.html
+++ b/fr/services.html
@@ -58,7 +58,7 @@
               <div class="mx-auto max-w-2xl py-24 sm:py-32 lg:py-48 2xl:py-56">
                 <div class="text-center">
                   <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl fadeup">Nos Services</h1>
-                  <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">Chez SimonSites, nous sommes spécialisés dans la création de sites web personnalisés, adaptés aux besoins spécifiques de votre entreprise. Nous pensons que chaque marque est unique, c'est pourquoi nous travaillons en étroite collaboration avec vous pour créer un site web qui reflète votre identité et vos valeurs. Nos services abordables vous garantissent un site web professionnel de haute qualité sans vous ruiner.</p>
+                  <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">Chez SimonSites, nous nous efforçons de créer des sites web sur mesure, adaptés aux besoins spécifiques de votre entreprise. Nous pensons que chaque marque est unique, c'est pourquoi nous travaillons en étroite collaboration avec vous pour créer un site web qui reflète votre identité et vos valeurs. Nos services abordables vous permettent d'obtenir un site web professionnel de haute qualité sans vous ruiner. <br><br> <b>Vous ne savez pas si SimonSites est fait pour vous?</b> Nous vous proposons une démonstration gratuite pour vous convaincre de la qualité de notre travail!</p>
                   <div class="mt-6 flex items-center justify-center gap-x-6">
                     <a href="contact.html" class="rounded-md bg-[#135981] px-3.5 py-2.5 text-base font-semibold text-white shadow-md hover:bg-[#38B6FF] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 fadeup delay2">Prendre Contact</a>
                     
@@ -254,7 +254,7 @@
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
           <div class="mx-auto max-w-2xl sm:text-center">
             <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Des prix simples et abordables</h2>
-            <p class="mt-6 text-lg leading-8 text-gray-600">Nous proposons plusieurs formules pour répondre à vos besoins.</p>
+            <p class="mt-6 text-lg leading-8 text-gray-600">Nous offrons des forfaits très abordables pour démarrer votre présence en ligne. <b>Nous offrons une démonstration gratuite à tout le monde!</b></p>
           </div>
           <div class="mx-auto mt-16 max-w-2xl rounded-lg shadow-md sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
             <div class="p-8 sm:p-10 lg:flex-auto">
