--- a/fr/index.html
+++ b/fr/index.html
@@ -58,7 +58,7 @@
               <div class="mx-auto max-w-2xl py-24 sm:py-32 lg:py-48 2xl:py-56">
                 <div class="text-center">
                   <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl fadeup">Construisez votre rêve numérique avec Simon Sites</h1>
-                  <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">Développement web sur mesure, adapté à votre vision, offrant des expériences transparentes et réactives qui captivent votre public et conduisent à des résultats. Laissez-nous donner vie à vos idées avec précision et créativité.</p>
+                  <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">Chez SimonSites, ma passion est d'aider les petites entreprises et les particuliers à briller en ligne grâce à des sites Web professionnels magnifiquement conçus. Que vous ayez besoin d'un site simple ou de quelque chose de plus personnalisé, je suis là pour donner vie à votre vision. En mettant l'accent sur l'accessibilité et la qualité, je vous construirai un site qui non seulement aura fière allure mais fonctionnera parfaitement sur tous les appareils. Créons ensemble quelque chose d'extraordinaire. <br><br><b>Besoin d'un site web personnalisé ? Obtenez une démonstration gratuite et voyez comment SimonSites peut donner vie à votre vision!</b></p>
                   <div class="mt-10 flex items-center justify-center gap-x-6">
                     <a href="contact.html" class="rounded-md bg-[#135981] px-3.5 py-2.5 text-sm font-semibold text-white shadow-md hover:bg-[#38B6FF] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 fadeup delay2">Contacter</a>
                     <a href="about.html" class="text-sm font-semibold leading-6 text-gray-900 fadeup delay3">Apprendre davantage <span aria-hidden="true">→</span></a>
@@ -83,7 +83,7 @@
               </h2>
               <div class="fadeup w-1/3 h-0.5 ml-1 bg-[#135981] xl:w-1/12"></div>
               <p class="fadeup py-4 text-gray-600 text-base lg:text-lg 2xl:text-xl">
-                Chez SimonSites, nous sommes spécialisés dans la création de sites web magnifiques et performants qui s'alignent parfaitement sur l'identité de votre marque. Avec des années d'expérience dans le développement de sites web, nous nous engageons à fournir des résultats exceptionnels qui dépassent les attentes. Notre passion pour le développement web nous pousse à rester à la pointe de la technologie, en veillant à ce que votre site soit non seulement visuellement attrayant, mais aussi sécurisé, évolutif et optimisé pour la performance.
+                Chez Simon Sites, nous sommes passionnés par la transformation de vos idées en expériences numériques captivantes. Notre processus de conception de sites web est collaboratif ; nous travaillons en étroite collaboration avec vous pour comprendre votre vision et l'identité de votre marque. De la conception à la réalisation, nous nous assurons que chaque détail correspond à vos objectifs. Que vous recherchiez une interface minimaliste ou des visuels vibrants, nous nous engageons à vous fournir un site web qui représente véritablement votre entreprise.
               </p>
             </div>
             <div class="md:flex md:justify-end">
@@ -188,7 +188,7 @@
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
           <div class="mx-auto max-w-2xl sm:text-center">
             <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Des prix simples et abordables</h2>
-            <p class="mt-6 text-lg leading-8 text-gray-600">Nous proposons plusieurs formules pour répondre à vos besoins.</p>
+            <p class="mt-6 text-lg leading-8 text-gray-600">nous offrons des forfaits très abordables pour démarrer votre présence en ligne. <b>Nous offrons une démonstration gratuite à tout le monde !</b></p>
           </div>
           <div class="mx-auto mt-16 max-w-2xl rounded-lg shadow-md sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
             <div class="p-8 sm:p-10 lg:flex-auto">
