--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <div class="mx-auto max-w-2xl py-24 sm:py-32 lg:py-48 2xl:py-56">
                 <div class="text-center">
                   <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl fadeup">Build Your Digital Dream with Simon Sites</h1>
-                  <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">Custom web development tailored to your vision, delivering seamless and responsive experiences that captivate your audience and drive results. Let us bring your ideas to life with precision and creativity.</p>
+                  <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">At SimonSites, I help small businesses and individuals stand out with beautifully designed, professional websites. Whether simple or custom, I'll bring your vision to life—affordably and with quality. Let’s create something amazing together! <br><br><b>Need a custom website? Get a free demo and see how SimonSites can bring your vision to life!</b></p>
                   <div class="mt-10 flex items-center justify-center gap-x-6">
                     <a href="contact.html" class="rounded-md bg-[#135981] px-3.5 py-2.5 text-sm font-semibold text-white shadow-md hover:bg-[#38B6FF] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 fadeup delay2">Contact</a>
                     <a href="about.html" class="text-sm font-semibold leading-6 text-gray-900 fadeup delay3">Learn more <span aria-hidden="true">→</span></a>
@@ -81,7 +81,7 @@
               </h2>
               <div class="fadeup w-1/3 h-0.5 ml-1 bg-[#135981] xl:w-1/12"></div>
               <p class="fadeup py-4 text-gray-600 text-base lg:text-lg 2xl:text-xl">
-                  At SimonSites, we specialize in crafting beautiful, high-performance websites that align perfectly with your brand’s identity. With years of experience in front-end development, we’re committed to delivering exceptional results that exceed expectations. Our passion for web development drives us to stay ahead of the curve, ensuring your site is not only visually appealing but also secure, scalable, and optimized for performance.
+                At Simon Sites, we're passionate about transforming your ideas into captivating digital experiences. Our website design process is collaborative; we work closely with you to understand your vision and brand identity. From concept to completion, we ensure every detail aligns with your goals. Whether you seek a minimalist interface or vibrant visuals, we're committed to delivering a website that truly represents your business.
               </p>
             </div>
             <div class="md:flex md:justify-end">
@@ -186,7 +186,7 @@
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
           <div class="mx-auto max-w-2xl sm:text-center">
             <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Simple, Affordable Pricing</h2>
-            <p class="mt-6 text-lg leading-8 text-gray-600">We offer multiple packages to fit your needs.</p>
+            <p class="mt-6 text-lg leading-8 text-gray-600">We offer very affordable packages to start your online prescence. <b>We offer a free demo to anyone!</b></p>
           </div>
           <div class="mx-auto mt-16 max-w-2xl rounded-lg shadow-md sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
             <div class="p-8 sm:p-10 lg:flex-auto">
