--- a/services.html
+++ b/services.html
@@ -57,7 +57,7 @@
               <div class="mx-auto max-w-2xl py-24 sm:py-32 lg:py-48 2xl:py-56">
                 <div class="text-center">
                   <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl fadeup">Our Services</h1>
-                  <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">At SimonSites, we specialize in crafting custom websites tailored to your specific business needs. We believe that every brand is unique, so we work closely with you to create a website that reflects your identity and values. Our affordable services ensure that you get a high-quality, professional website without breaking the bank.</p>
+                  <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">At SimonSites, we strive to craft custom websites tailored to your specific business needs. We believe that every brand is unique, so we work closely with you to create a website that reflects your identity and values. Our affordable services ensure that you get a high-quality, professional website without breaking the bank. <br><br><b>Not sure if SimonSites is right for you?</b> We offer a free demo to demonstrate the quality of our work firsthand!</p>
                   <div class="mt-6 flex items-center justify-center gap-x-6">
                     <a href="contact.html" class="rounded-md bg-[#135981] px-3.5 py-2.5 text-base font-semibold text-white shadow-md hover:bg-[#38B6FF] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 fadeup delay2">Get in Touch</a>
                     
@@ -254,7 +254,7 @@
           <div class="mx-auto max-w-7xl px-6 lg:px-8">
             <div class="mx-auto max-w-2xl sm:text-center">
               <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Simple, Affordable Pricing</h2>
-              <p class="mt-6 text-lg leading-8 text-gray-600">We offer multiple packages to fit your needs.</p>
+              <p class="mt-6 text-lg leading-8 text-gray-600">We offer very affordable packages to start your online prescence. <b>We offer a free demo to anyone!</b></p>
             </div>
             <div class="mx-auto mt-16 max-w-2xl rounded-lg shadow-md sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
               <div class="p-8 sm:p-10 lg:flex-auto">
