--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               </h2>
               <div class="fadeup w-1/3 h-0.5 ml-1 bg-[#135981] xl:w-1/12"></div>
               <p class="fadeup py-4 text-gray-600 text-base lg:text-lg 2xl:text-xl">
-                At Simon Sites, we're passionate about transforming your ideas into captivating digital experiences. Our website design process is collaborative; we work closely with you to understand your vision and brand identity. From concept to completion, we ensure every detail aligns with your goals. Whether you seek a minimalist interface or vibrant visuals, we're committed to delivering a website that truly represents your business.
+                At Simon Sites, we're passionate about transforming your ideas into captivating digital experiences. Our website design process is collaborative; we work closely with you to understand your vision and brand identity. From concept to completion, we code every line by hand to ensure every detail aligns with your goals. Whether you seek a minimalist interface or vibrant visuals, we're committed to delivering a website that truly represents your business.
               </p>
             </div>
             <div class="md:flex md:justify-end">
