--- a/fr/index.html
+++ b/fr/index.html
@@ -58,7 +58,7 @@
               <div class="mx-auto max-w-2xl py-24 sm:py-32 lg:py-48 2xl:py-56">
                 <div class="text-center">
                   <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl fadeup">Construisez votre rêve numérique avec Simon Sites</h1>
-                  <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">Chez SimonSites, ma passion est d'aider les petites entreprises et les particuliers à briller en ligne grâce à des sites Web professionnels magnifiquement conçus. Que vous ayez besoin d'un site simple ou de quelque chose de plus personnalisé, je suis là pour donner vie à votre vision. En mettant l'accent sur l'accessibilité et la qualité, je vous construirai un site qui non seulement aura fière allure mais fonctionnera parfaitement sur tous les appareils. Créons ensemble quelque chose d'extraordinaire. <br><br><b>Besoin d'un site web personnalisé ? Obtenez une démonstration gratuite et voyez comment SimonSites peut donner vie à votre vision!</b></p>
+                  <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">Chez SimonSites, j'aide les petites entreprises et les particuliers à se démarquer grâce à des sites web professionnels magnifiquement conçus. Qu'il s'agisse d'un site simple ou personnalisé, je donnerai vie à votre vision, à un prix abordable et avec qualité. Créons ensemble quelque chose d'extraordinaire ! <br><br><b>Besoin d'un site web personnalisé ? Obtenez une démonstration gratuite et voyez comment SimonSites peut donner vie à votre vision!</b></p>
                   <div class="mt-10 flex items-center justify-center gap-x-6">
                     <a href="contact.html" class="rounded-md bg-[#135981] px-3.5 py-2.5 text-sm font-semibold text-white shadow-md hover:bg-[#38B6FF] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 fadeup delay2">Contacter</a>
                     <a href="about.html" class="text-sm font-semibold leading-6 text-gray-900 fadeup delay3">Apprendre davantage <span aria-hidden="true">→</span></a>
@@ -187,10 +187,10 @@
       <div class="bg-white py-24 sm:py-32">
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
           <div class="mx-auto max-w-2xl sm:text-center">
-            <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Des prix simples et abordables</h2>
-            <p class="mt-6 text-lg leading-8 text-gray-600">nous offrons des forfaits très abordables pour démarrer votre présence en ligne. <b>Nous offrons une démonstration gratuite à tout le monde !</b></p>
+            <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl fadeup">Des prix simples et abordables</h2>
+            <p class="mt-6 text-lg leading-8 text-gray-600 fadeup">Nous offrons des forfaits très abordables pour démarrer votre présence en ligne. <b>Nous offrons une démonstration gratuite à tout le monde !</b></p>
           </div>
-          <div class="mx-auto mt-16 max-w-2xl rounded-lg shadow-md sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
+          <div class="mx-auto mt-16 max-w-2xl rounded-lg shadow-md sm:mt-20 lg:mx-0 lg:flex lg:max-w-none fadeup">
             <div class="p-8 sm:p-10 lg:flex-auto">
               <h3 class="text-2xl font-bold tracking-tight text-gray-900">Site standard</h3>
               <p class="mt-6 text-base leading-7 text-gray-600">Parfait pour les petites entreprises et les individus qui ont besoin d'une présence professionnelle en ligne.</p>
@@ -249,7 +249,7 @@
                 <div class="mx-auto max-w-xs px-8">
                   <p class="text-base font-semibold text-gray-600">A partir de</p>
                   <p class="mt-6 flex items-baseline justify-center gap-x-2">
-                    <span class="text-5xl font-bold tracking-tight text-gray-900">$90</span>
+                    <span class="text-5xl font-bold tracking-tight text-gray-900">$150</span>
                     <span class="text-sm font-semibold leading-6 tracking-wide text-gray-600">CAD</span>
                   </p>
                   <a href="contact.html" class="mt-10 block w-full rounded-md bg-[#135981] px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-[#38B6FF] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get Started</a>
@@ -259,7 +259,7 @@
             </div>
           </div>
 
-          <div class="mx-auto mt-16 max-w-2xl rounded-lg shadow-md sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
+          <div class="mx-auto mt-16 max-w-2xl rounded-lg shadow-md sm:mt-20 lg:mx-0 lg:flex lg:max-w-none fadeup" >
             <div class="p-8 sm:p-10 lg:flex-auto">
               <h3 class="text-2xl font-bold tracking-tight text-gray-900">Site Premium</h3>
               <p class="mt-6 text-base leading-7 text-gray-600">Idéal pour les entreprises à la recherche de fonctionnalités avancées et d'une plus grande personnalisation.</p>
@@ -318,7 +318,7 @@
                 <div class="mx-auto max-w-xs px-8">
                   <p class="text-base font-semibold text-gray-600">Starting At</p>
                   <p class="mt-6 flex items-baseline justify-center gap-x-2">
-                    <span class="text-5xl font-bold tracking-tight text-gray-900">$150</span>
+                    <span class="text-5xl font-bold tracking-tight text-gray-900">$280</span>
                     <span class="text-sm font-semibold leading-6 tracking-wide text-gray-600">CAD</span>
                   </p>
                   <a href="contact.html" class="mt-10 block w-full rounded-md bg-[#135981] px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-[#38B6FF] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get Started</a>
