--- a/fr/services.html
+++ b/fr/services.html
@@ -253,10 +253,10 @@
       <div class="bg-white py-24 sm:py-32">
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
           <div class="mx-auto max-w-2xl sm:text-center">
-            <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Des prix simples et abordables</h2>
-            <p class="mt-6 text-lg leading-8 text-gray-600">Nous offrons des forfaits très abordables pour démarrer votre présence en ligne. <b>Nous offrons une démonstration gratuite à tout le monde!</b></p>
+            <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl fadeup">Des prix simples et abordables</h2>
+            <p class="mt-6 text-lg leading-8 text-gray-600 fadeup" >Nous offrons des forfaits très abordables pour démarrer votre présence en ligne. <b>Nous offrons une démonstration gratuite à tout le monde!</b></p>
           </div>
-          <div class="mx-auto mt-16 max-w-2xl rounded-lg shadow-md sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
+          <div class="mx-auto mt-16 max-w-2xl rounded-lg shadow-md sm:mt-20 lg:mx-0 lg:flex lg:max-w-none fadeup">
             <div class="p-8 sm:p-10 lg:flex-auto">
               <h3 class="text-2xl font-bold tracking-tight text-gray-900">Site standard</h3>
               <p class="mt-6 text-base leading-7 text-gray-600">Parfait pour les petites entreprises et les individus qui ont besoin d'une présence professionnelle en ligne.</p>
@@ -315,7 +315,7 @@
                 <div class="mx-auto max-w-xs px-8">
                   <p class="text-base font-semibold text-gray-600">A partir de</p>
                   <p class="mt-6 flex items-baseline justify-center gap-x-2">
-                    <span class="text-5xl font-bold tracking-tight text-gray-900">$90</span>
+                    <span class="text-5xl font-bold tracking-tight text-gray-900">$150</span>
                     <span class="text-sm font-semibold leading-6 tracking-wide text-gray-600">CAD</span>
                   </p>
                   <a href="contact.html" class="mt-10 block w-full rounded-md bg-[#135981] px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-[#38B6FF] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get Started</a>
@@ -325,7 +325,7 @@
             </div>
           </div>
 
-          <div class="mx-auto mt-16 max-w-2xl rounded-lg shadow-md sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
+          <div class="mx-auto mt-16 max-w-2xl rounded-lg shadow-md sm:mt-20 lg:mx-0 lg:flex lg:max-w-none fadeup">
             <div class="p-8 sm:p-10 lg:flex-auto">
               <h3 class="text-2xl font-bold tracking-tight text-gray-900">Site Premium</h3>
               <p class="mt-6 text-base leading-7 text-gray-600">Idéal pour les entreprises à la recherche de fonctionnalités avancées et d'une plus grande personnalisation.</p>
@@ -384,7 +384,7 @@
                 <div class="mx-auto max-w-xs px-8">
                   <p class="text-base font-semibold text-gray-600">A partir de</p>
                   <p class="mt-6 flex items-baseline justify-center gap-x-2">
-                    <span class="text-5xl font-bold tracking-tight text-gray-900">$150</span>
+                    <span class="text-5xl font-bold tracking-tight text-gray-900">$280</span>
                     <span class="text-sm font-semibold leading-6 tracking-wide text-gray-600">CAD</span>
                   </p>
                   <a href="contact.html" class="mt-10 block w-full rounded-md bg-[#135981] px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-[#38B6FF] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get Started</a>
