--- a/400.html
+++ b/400.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error 404</title>
     <link rel="shortcut icon" href="assets/SmallLogo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="styles/app.css">
+    <link rel="stylesheet" href="https://simonsites.com/styles/app.css">
 </head>
 <body>
     <h1 class="text-2xl font-bold text-center my-24">Something Went Wrong...</h1>
@@ -13,8 +13,8 @@
         <p class="text-center text-lg font-semibold">Error Code 40</p>
         <p class="text-center text-lg">Bad Request</p>
     </div>
-    <div class="flex justify-center"><a href="index.html" class="text-xl text-center font-bold text-[#135981]">
-        <img style="height: 200px;" src="assets/fulllogo.svg" alt="logo">
+    <div class="flex justify-center"><a href="https://simonsites.com/index.html" class="text-xl text-center font-bold text-[#135981]">
+        <img style="height: 200px;" src="https://simonsites.com/assets/fulllogo.svg" alt="logo">
         Back To Home
         
     </a></div>
